@@ -20,6 +20,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -84,6 +85,6 @@ public class MerchantCategoryServiceImpl implements MerchantCategoryService {
         return merchantCategoryRepository.findAll()
                 .stream()
                 .map(merchantCategoryMapper::toResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
